codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__windows_sandbox_picker_fallback_false_40.snap
---
source: tui/src/chatwidget/tests/permissions.rs
expression: rendered
---
  Set up the Codex agent sandbox to
  protect your files and control
  network access. Learn more
  <https://developers.openai.com/codex
  /windows>


  1. Set up default sandbox (requires
     Administrator permissions)
› 2. Use non-admin sandbox (higher risk
     if prompt injected)
  3. Quit

  f3 select · f2 back
