codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__workspace_member_credits_depleted_prompt.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: popup
---
  You've reached your workspace credit limit
  Your workspace is out of credits. Ask your workspace owner to add more. Notify owner?


  1. Yes (y)
› 2. No (default) (n)

  enter select · esc back
